@@ -1,3 +1,10 @@
+2002-09-24  Theppitak Karoonboonyanan <thep@linux.thai.net>
+
+	* src/wordseg.cpp:
+	Fix segfault in case of unknown file format.
+	Nicer "Usage:" handling.
+	Remove winlatex, maclatex from Usage:
+
 2002-09-23  Theppitak Karoonboonyanan <thep@linux.thai.net>
 
 	* configure.in:
